# confplugs

./: README.md  requirements.txt  setup.cfg
confplugs/: __init__.py  confplugs.py  utils.py
example/: app.py  config.yaml  config_nested.yaml  config_nested_plugin1.yaml  config_nested_plugin2.yaml  main.py
example/configs/: config_nested.yaml  config_simple.yaml
example/configs/plugins/: config_nested_plugin1.yaml
example/plugin1/: implementation.py
example/plugin2/: implementation2.py  implementation3.py
