[metadata]
name = confplugs
author = Leif Van Holland
version = 0.0.5
url = https://github.com/leifvan/confplugs
description = A simple plugin framework for Python that uses .yaml configuration files with schema
    validation to provide a fully configurable app. The goal is to provide swappable
    implementations - for example for machine learning pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = confplugs
install_requires =
    yamale
    pyyaml
    pyyaml-include
    typing
    dataclasses
    setuptools
